Add link to notes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
 
 <div id="Welcome !!!!!"><h3 id="Welcome !!!!!" class="header"><a href="#Welcome !!!!!">Welcome !!!!!</a></h3></div>
+
+<p>
+<a href="https://www.albamr09.github.io/Notes">Notes</a>
+</p>
+
 </body>
 </html>
