Add link to notes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="Welcome !!!!!"><h3 id="Welcome !!!!!" class="header"><a href="#Welcome !!!!!">Welcome !!!!!</a></h3></div>
 
 <p>
-<a href="https://www.albamr09.github.io/Notes">Notes</a>
+<a href="https://albamr09.github.io/Notes/">Notes</a>
 </p>
 
 </body>
