--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 </head>
 <body>
 
-<div id="Welcome !!!!!"><h3 id="Welcome !!!!!" class="header"><a href="#Welcome !!!!!">Welcome !!!!!</a></h3></div>
+<div id="Registry Index"><h1 id="Registry Index" class="header"><a href="#Registry Index">Registry Index</a></h1></div>
 
-<p>
+<hr />
+
+<ul>
+<li>
 <a href="https://albamr09.github.io/Notes/">Notes</a>
-</p>
+
+<li>
+<a href="https://albamr09.github.io/Study/">Study</a>
+
+</ul>
 
 </body>
 </html>
