--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
 
 </ul>
 
+
+<hr />
+
+<p>
+Keybinding to convert current file to html: ,wh
+Keybinding to see html file in browser: ,whh
+</p>
+
 </body>
 </html>
