[DS0001] Start copying [skip ci]

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<!DOCTYPE html>
 <html>
-<head>
-<link rel="Stylesheet" type="text/css" href="style.css">
-<title>index</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-
+  <head>
+    <link rel="Stylesheet" type="text/css" href="style.css" />
+    <title>index</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- For LaTeX -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+    ></script>
+  </head>
+  <body>
+    <a
+      href="https://albamr09.github.io/"
+      style="
+        color: white;
+        font-weight: bold;
+        text-decoration: none;
+        padding: 3px 6px;
+        border-radius: 3px;
+        background-color: #1e90ff;
+        text-transform: uppercase;
+      "
+      >Index</a
+    >
+    <hr />
+    <div class="content">
 <div id="Registry Index"><h1 id="Registry Index" class="header"><a href="#Registry Index">Registry Index</a></h1></div>
 
 <hr />
@@ -23,6 +42,6 @@
 
 
 <hr />
-
-</body>
+</div>
+  </body>
 </html>
