--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <html>
   <head>
-    <link
-      rel="Stylesheet"
-      type="text/css"
-      href="https://albamr09.github.io/style.css"
-    />
+    <link rel="Stylesheet" type="text/css" href="style.css" />
     <title>index</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- For LaTeX -->
@@ -18,7 +14,7 @@
     <link
       rel="Stylesheet"
       type="text/css"
-      href="https://albamr09.github.io/stackoverflow-light.min.css"
+      href="https://albamr09.github.io/atom-one-light.min.css"
     />
   </head>
   <body>
