Add search [skip ci]

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       >Index</a
     >
     <hr />
+    <form action="/search/" method="GET">
+        <input required type="search" name="q" />
+        <button type="submit">Search</button>
+    </form>
+    <hr />
     <div class="content">
 <div id="Registry Index"><h1 id="Registry Index" class="header"><a href="#Registry Index">Registry Index</a></h1></div>
 
@@ -57,6 +62,14 @@
   <script
     type="text/javascript"
     src="https://albamr09.github.io/zepto.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://albamr09.github.io/lunar.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://albamr09.github.io/search.js"
   ></script>
   <script type="text/javascript">
     $("pre").each(function (index, item) {
