Add search functionality [skip ci]

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   ></script>
   <script
     type="text/javascript"
-    src="https://albamr09.github.io/lunar.js"
+    src="https://albamr09.github.io/lunr.js"
   ></script>
   <script
     type="text/javascript"
