--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <!-- Normal styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="style.css" />
     <!-- Styling for search -->
-    <link rel="Stylesheet" type="text/css" href="search.css" />
+    <link
+      rel="Stylesheet"
+      type="text/css"
+      href="https://albamr09.github.io/search.css"
+    />
     <title>index</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- For LaTeX -->
