Use flexsearch [skip ci]

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   ></script>
   <script
     type="text/javascript"
-    src="https://albamr09.github.io/lunr.js"
+    src="https://albamr09.github.io/flexsearch.bundle.js"
   ></script>
   <script
     type="text/javascript"
