--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       type="text/css"
       href="https://albamr09.github.io/atom-one-light.min.css"
     />
+    <!-- Page icon -->
+    <link rel="icon" type="image/png" href="https://albamr09.github.io/icon.png">
   </head>
   <body>
     <a
