Add icon [skip ci]

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="https://albamr09.github.io/atom-one-light.min.css"
     />
     <!-- Page icon -->
-    <link rel="icon" type="image/png" href="https://albamr09.github.io/icon.png">
+    <link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/icon.svg">
   </head>
   <body>
     <a
