Update create_index script and update study todos [skip ci]

--- a/index.html
+++ b/index.html
@@ -1,50 +1,13 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="style.css" />
-    <!-- Styling for search -->
-    <link
-      rel="Stylesheet"
-      type="text/css"
-      href="https://albamr09.github.io/search.css"
-    />
-    <title>index</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- For LaTeX -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script
-      id="MathJax-script"
-      async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
-    ></script>
-    <!-- Code Highlight -->
-    <link
-      rel="Stylesheet"
-      type="text/css"
-      href="https://albamr09.github.io/atom-one-light.min.css"
-    />
-  </head>
-  <body>
-    <a
-      href="https://albamr09.github.io/"
-      style="
-        color: white;
-        font-weight: bold;
-        text-decoration: none;
-        padding: 3px 6px;
-        border-radius: 3px;
-        background-color: #1e90ff;
-        text-transform: uppercase;
-      "
-      >Index</a
-    >
-    <form id="search_form" class="search-form">
-      <input required type="search" id="search_term" class="searchTerm" />
-      <button type="submit" class="searchButton">Search</button>
-    </form>
-    <div id="search-result" class="search-result-hide"></div>
-    <hr />
-    <div class="content">
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<title>index</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
 <div id="Registry Index"><h1 id="Registry Index" class="header"><a href="#Registry Index">Registry Index</a></h1></div>
 
 <hr />
@@ -60,28 +23,6 @@
 
 
 <hr />
-</div>
-  </body>
-  <script
-    type="text/javascript"
-    src="https://albamr09.github.io/highlight.min.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="https://albamr09.github.io/zepto.min.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="https://albamr09.github.io/flexsearch.bundle.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="https://albamr09.github.io/search.js"
-  ></script>
-  <script type="text/javascript">
-    $("pre").each(function (index, item) {
-      $(item).html("<code>" + $(item).html() + "</code>");
-    });
-    hljs.initHighlightingOnLoad();
-  </script>
+
+</body>
 </html>
