--- a/index.html
+++ b/index.html
@@ -1,39 +1,20 @@
-<html>
-  <head>
+<html><head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="style.css" />
+    <link rel="Stylesheet" type="text/css" href="style.css">
     <!-- Styling for search -->
-    <link
-      rel="Stylesheet"
-      type="text/css"
-      href="https://albamr09.github.io/search.css"
-    />
-    <title>index</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/search.css">
+    <title>Registry Index</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- For LaTeX -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script
-      id="MathJax-script"
-      async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
-    ></script>
+    <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <!-- Code Highlight -->
-    <link
-      rel="Stylesheet"
-      type="text/css"
-      href="https://albamr09.github.io/atom-one-light.min.css"
-    />
+    <link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/atom-one-light.min.css">
     <!-- Page icon -->
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://albamr09.github.io/icon.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/icon.svg">
   </head>
   <body>
-    <a
-      href="https://albamr09.github.io/"
-      style="
+    <a href="https://albamr09.github.io/" style="
         color: white;
         font-weight: bold;
         text-decoration: none;
@@ -41,61 +22,46 @@
         border-radius: 3px;
         background-color: #1e90ff;
         text-transform: uppercase;
-      "
-      >Index</a
-    >
+      ">Index</a>
     <form id="search_form" class="search-form">
-      <input required type="search" id="search_term" class="searchTerm" />
+      <input required="" type="search" id="search_term" class="searchTerm">
       <button type="submit" class="searchButton">Search</button>
     </form>
     <div id="search-background" class="search-background">
       <div id="search-result" class="search-result-hide"></div>
       <div id="search-form-modal" class="search-form-modal">
         <form id="search-form-in-modal">
-          <input required type="search" id="search-input-in-modal" class="search-input-in-modal" placeholder="Search whatever..."/>
+          <input required="" type="search" id="search-input-in-modal" class="search-input-in-modal" placeholder="Search whatever...">
           <button type="submit" class="searchButton">Search</button>
         </form>
       </div>
     </div>
-    <hr />
+    <hr>
     <div class="content">
 <div id="Registry Index"><h1 id="Registry Index" class="header"><a href="#Registry Index">Registry Index</a></h1></div>
 
-<hr />
+<hr>
 
 <ul>
 <li>
 <a href="https://albamr09.github.io/Notes/">Notes</a>
 
-<li>
+</li><li>
 <a href="https://albamr09.github.io/Study/">Study</a>
 
-</ul>
-
-
-<hr />
+</li></ul>
+<hr>
 </div>
-  </body>
-  <script
-    type="text/javascript"
-    src="https://albamr09.github.io/highlight.min.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="https://albamr09.github.io/zepto.min.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="https://albamr09.github.io/flexsearch.bundle.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="https://albamr09.github.io/search.js"
-  ></script>
+  
+  <script type="text/javascript" src="https://albamr09.github.io/highlight.min.js"></script>
+  <script type="text/javascript" src="https://albamr09.github.io/zepto.min.js"></script>
+  <script type="text/javascript" src="https://albamr09.github.io/flexsearch.bundle.js"></script>
+  <script type="text/javascript" src="https://albamr09.github.io/search.js"></script>
   <script type="text/javascript">
     $("pre").each(function (index, item) {
       $(item).html("<code>" + $(item).html() + "</code>");
     });
     hljs.initHighlightingOnLoad();
   </script>
-</html>
+
+</body></html>
