Fix renaming to src [skip ci]

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
 <ul>
 <li>
-<a href="/src/Notes/index.html">Notes</a>
+<a href="src/Notes/index.html">Notes</a>
 
 </li><li>
-<a href="/src/Study/index.html">Study</a>
+<a href="src/Study/index.html">Study</a>
 
 </li></ul>
 <hr>
