Fix web page [skip ci]

--- a/src/Study/Math/index.html
+++ b/src/Study/Math/index.html
@@ -82,7 +82,7 @@ Fearon's Pre-Algebra <em>(this one is better)</em>
 
 <ul>
 <li class="done3">
-<a href="CA.html">College Algebra by Kaufmann</a> <em>(more begginer friendly)</em>
+College Algebra by Kaufmann <em>(more begginer friendly)</em>
 
 </li><li class="done0">
 College Algebra by Blitzer
