Add 06_02 for AGAAT [skip ci]

--- a/src/Notes/index.html
+++ b/src/Notes/index.html
@@ -36,11 +36,20 @@
 
 <hr>
 
+<div id="Notes-Math"><h2 id="Math" class="header"><a href="#Notes-Math">Math</a></h2></div>
+
 <div id="Notes-Web Development"><h2 id="Web Development" class="header"><a href="#Notes-Web Development">Web Development</a></h2></div>
 
-<div id="Notes-Web Development-Frameworks"><h3 id="Frameworks" class="header"><a href="#Notes-Web Development-Frameworks">Frameworks</a></h3></div>
+<div id="Notes-Pre-Calculus"><h2 id="Pre-Calculus" class="header"><a href="#Notes-Pre-Calculus">Pre-Calculus</a></h2></div>
 
-<div id="Notes-Web Development-Frameworks-Front"><h4 id="Front" class="header"><a href="#Notes-Web Development-Frameworks-Front">Front</a></h4></div>
+<ol>
+<li>
+<a href="Math/Pre-Calculus/AGAAT/index.html">A Graphical Approach to Algebra and Trigonometry</a>
+
+</li></ol>
+<div id="Notes-Pre-Calculus-Frameworks"><h3 id="Frameworks" class="header"><a href="#Notes-Pre-Calculus-Frameworks">Frameworks</a></h3></div>
+
+<div id="Notes-Pre-Calculus-Frameworks-Front"><h4 id="Front" class="header"><a href="#Notes-Pre-Calculus-Frameworks-Front">Front</a></h4></div>
 
 <ol>
 <li>
@@ -48,7 +57,7 @@
 
 </li></ol>
  
-<div id="Notes-Web Development-Frameworks-Back"><h4 id="Back" class="header"><a href="#Notes-Web Development-Frameworks-Back">Back</a></h4></div>
+<div id="Notes-Pre-Calculus-Frameworks-Back"><h4 id="Back" class="header"><a href="#Notes-Pre-Calculus-Frameworks-Back">Back</a></h4></div>
 
 <ol>
 <li>
@@ -61,7 +70,7 @@
 <a href="WebDev/Spring/index.html">Spring</a>
 
 </li></ol>
-<div id="Notes-Web Development-Technologies"><h3 id="Technologies" class="header"><a href="#Notes-Web Development-Technologies">Technologies</a></h3></div>
+<div id="Notes-Pre-Calculus-Technologies"><h3 id="Technologies" class="header"><a href="#Notes-Pre-Calculus-Technologies">Technologies</a></h3></div>
 
 <ol>
 <li>
@@ -71,7 +80,7 @@
 <a href="WebDev/GraphQL/index.html">GraphQL</a>
 
 </li></ol>
-<div id="Notes-Web Development-Technologies-DB"><h4 id="DB" class="header"><a href="#Notes-Web Development-Technologies-DB">DB</a></h4></div>
+<div id="Notes-Pre-Calculus-Technologies-DB"><h4 id="DB" class="header"><a href="#Notes-Pre-Calculus-Technologies-DB">DB</a></h4></div>
 
 <ol>
 <li>
