Fix matrices [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/06_03.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/06_03.html
@@ -57,11 +57,11 @@ can be written as the following <span id="Solution of Linear Systems by Row Tran
 </p>
 
 \begin{align}
-\begin{pmatrix}[ccc|c]
+\begin{bmatrix}
 a_1 &amp; b_1 &amp; c_1 &amp; d_1 \\
 a_2 &amp; b_2 &amp; c_2 &amp; d_2 \\
 a_3 &amp; b_3 &amp; c_3 &amp; d_3 \\
-\end{pmatrix}
+\end{bmatrix}
 \end{align}
 
 <div id="Solution of Linear Systems by Row Transformations-Matrix Row Transformations"><h2 id="Matrix Row Transformations" class="header"><a href="#Solution of Linear Systems by Row Transformations-Matrix Row Transformations">Matrix Row Transformations</a></h2></div>
@@ -109,11 +109,11 @@ The following matrix is an augmented matrix in row echelon form:
 </p>
 
 \begin{align}
-\begin{pmatrix}[ccc|c]
+\begin{bmatrix}
   1 &amp; 2 &amp; 3 &amp; 4\\
   0 &amp; 5 &amp; 6 &amp; 7\\
   0 &amp; 0 &amp; 0 &amp; 9\\
-\end{pmatrix}
+\end{bmatrix}
 \end{align}
 
 <div id="Solution of Linear Systems by Row Transformations-Reduced Row Echelon Method"><h2 id="Reduced Row Echelon Method" class="header"><a href="#Solution of Linear Systems by Row Transformations-Reduced Row Echelon Method">Reduced Row Echelon Method</a></h2></div>
@@ -123,11 +123,11 @@ The reduced row echelon form has 1s along the main diagonal and 0s both below an
 </p>
 
 \begin{align}
-\begin{pmatrix}[ccc|c]
+\begin{bmatrix}
   1 &amp; 1 &amp; 1 &amp; 6\\
   2 &amp; -1 &amp; 1 &amp; 5\\
   3 &amp; 1 &amp; -1 &amp; 9\\
-\end{pmatrix}
+\end{bmatrix}
 \end{align}
 
 <p>
@@ -135,11 +135,11 @@ By using row transformations, this augmented matrix can be transformed to
 </p>
 
 \begin{align}
-\begin{pmatrix}[ccc|c]
+\begin{bmatrix}
   1 &amp; 0 &amp; 0 &amp; 3\\
   0 &amp; 1 &amp; 0 &amp; 2\\
   0 &amp; 0 &amp; 1 &amp; 1\\
-\end{pmatrix}
+\end{bmatrix}
 \end{align}
 
 <p>
@@ -153,13 +153,13 @@ Whenever a row of the augmented matrix is of the form
 </p>
 
 \begin{align}
-\begin{pmatrix}[ccc|c]
+\begin{bmatrix}
   0 &amp; 0 &amp; \cdots &amp; a\\
-\end{pmatrix}
+\end{bmatrix}
 \end{align}
 
 <p>
-where \(a \neq 0\) the system is inconsistent and there will be no solution.
+where \(a \neq 0\) the <span id="Solution of Linear Systems by Row Transformations-Special Cases-system is inconsistent"></span><strong id="system is inconsistent">system is inconsistent</strong> and there will be <span id="Solution of Linear Systems by Row Transformations-Special Cases-no solution"></span><strong id="no solution">no solution</strong>.
 </p>
 
 <p>
@@ -167,13 +167,13 @@ A row of the matrix of a linear system in the form:
 </p>
 
 \begin{align}
-\begin{pmatrix}[ccc|c]
+\begin{bmatrix}
   0 &amp; 0 &amp; \cdots &amp; 0\\
-\end{pmatrix}
+\end{bmatrix}
 \end{align}
 
 <p>
-indicates that the equations of the system are dependent.
+indicates that the equations of the <span id="Solution of Linear Systems by Row Transformations-Special Cases-system are dependent"></span><strong id="system are dependent">system are dependent</strong>.
 </p>
 </div>
   
