Add AGAA section 6.4 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -50,6 +50,9 @@ Systems of Equations
 </li><li>
 <a href="06_03.html">Solution of Linear Systems by Row Transformations</a>
 
+</li><li>
+<a href="06_04.html">Matrix Properties and Operations</a>
+
 </li></ol>
 </li></ol>
 </div>
