Finish section 06_05 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/06_04.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/06_04.html
@@ -37,7 +37,7 @@
 <hr>
 
 <p>
-In general, a matrix with m rows and n columns has dimension \(m \times n\). <span id="Matrix Properties and Operations-The number of rows is always given first"></span><strong id="The number of rows is always given first">The number of rows is always given first</strong>
+In general, a matrix with \(m\) rows and \(n\) columns has dimension \(m \times n\). <span id="Matrix Properties and Operations-The number of rows is always given first"></span><strong id="The number of rows is always given first">The number of rows is always given first</strong>
 </p>
 
 <p>
