Finish section 06_06 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -56,6 +56,9 @@ Systems of Equations
 </li><li>
 <a href="06_05.html">Determinants and Cramer's Rule</a>
 
+</li><li>
+<a href="06_06.html">Solution of Linear Systems by Matrix Inverses</a>
+
 </li></ol>
 </li></ol>
 </div>
