Fix latex again [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/06_06.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/06_06.html
@@ -56,7 +56,7 @@ by first forming the augmented matrix \([A|I_n]\) such that \(Ax = I_n\), thus \
 </p>
 
 <p>
-This means you are solving \(n\) systems of linear equations of the form \(Ax_i = I_{n}_{i}\).
+This means you are solving \(n\) systems of linear equations of the form \(Ax_i = I_{n_i}\).
 </p>
 
 <p>
