Add all sections to AGAA [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/06_05.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/06_05.html
@@ -45,14 +45,13 @@ The determinant of a \(2 \times 2\) matrix \(A\) is a real number defined as \(d
 <div id="Determinants and Cramer's Rule-Determinants of $3 \times 3$ matrices"><h2 id="Determinants of $3 \times 3$ matrices" class="header"><a href="#Determinants and Cramer's Rule-Determinants of $3 \times 3$ matrices">Determinants of \(3 \times 3\) matrices</a></h2></div>
 
 <p>
-The determinant of a \(3 \times 3\) matrix \(A\) is a real number defined as $det(A) = (a_{11}a_
-22}a_{33} + a_{12} a_{23} a_{31} + a_{13} a_{21}a_{32}) − (a_{31}a_{22}a_{13} + a_{32} a_{23} a_{11} + a_{33} a_{21}a_{12})$.
+The determinant of a \(3 \times 3\) matrix \(A\) is a real number defined as \(det(A) = (a_{11}a_{22}a_{33} + a_{12} a_{23} a_{31} + a_{13} a_{21}a_{32}) − (a_{31}a_{22}a_{13} + a_{32} a_{23} a_{11} + a_{33} a_{21}a_{12})\).
 </p>
 
 <div id="Determinants and Cramer's Rule-Cofactor"><h2 id="Cofactor" class="header"><a href="#Determinants and Cramer's Rule-Cofactor">Cofactor</a></h2></div>
 
 <p>
-Let \(M_{ij}\) be the <span id="Determinants and Cramer's Rule-Cofactor-minor"></span><strong id="minor">minor</strong> for element \(a_{ij}\) in an \(n \times n\) matrix. The cofactor of \(a_{ij}, written \)A_{ij}$, is defined as follows.
+Let \(M_{ij}\) be the <span id="Determinants and Cramer's Rule-Cofactor-minor"></span><strong id="minor">minor</strong> for element \(a_{ij}\) in an \(n \times n\) matrix. The cofactor of \(a_{ij}\), written \(A_{ij}\), is defined as follows.
 </p>
 
 \begin{align}
