--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -38,6 +38,21 @@
 
 <ol>
 <li>
+Linear Functions, Equations and Inequalities
+
+</li><li>
+Analysis of Graphs of Functions
+
+</li><li>
+Polynomial Functions
+
+</li><li>
+Rational, Power and Root Functions
+
+</li><li>
+Inverse, Exponential and Logarithmic Functions
+
+</li><li>
 Systems and Matrices
 
 <ol>
