--- a/src/Notes/index.html
+++ b/src/Notes/index.html
@@ -45,7 +45,32 @@
 <a href="Math/Pre-Calculus/AGAAT/index.html">A Graphical Approach to Algebra and Trigonometry</a>
 
 </li></ol>
- 
+<hr>
+
+<div id="Notes-Data Science"><h2 id="Data Science" class="header"><a href="#Notes-Data Science">Data Science</a></h2></div>
+
+<ol>
+<li>
+<a href="Master/index.html">Master</a>
+
+</li><li>
+<a href="DataScience/GoogleDataAnalyst/index.html">Google Data Analyst</a>
+
+</li><li>
+<a href="DataScience/(DS0001)_MLStanfordCoursera/index.html">Machine Learning Stanford Coursera</a>
+
+</li><li>
+<a href="DataScience/(DS0002)_AIRobotics/index.html">Artificial Intelligence in Robotics</a>
+
+</li><li>
+<a href="DataScience/(DS0003)_Online_Training_Mobile_Robotics/index.html">Online Training Mobile Robotics</a>
+
+</li><li>
+<a href="DataScience/Other/index.html">Standalone Topics</a>
+
+</li></ol>
+<hr>
+
 <div id="Notes-Web Development"><h2 id="Web Development" class="header"><a href="#Notes-Web Development">Web Development</a></h2></div>
 
 <div id="Notes-Web Development-Frameworks"><h3 id="Frameworks" class="header"><a href="#Notes-Web Development-Frameworks">Frameworks</a></h3></div>
@@ -86,27 +111,6 @@
 <ol>
 <li>
 <a href="WebDev/MongoDB/index.html">MongoDB</a>
-
-</li></ol>
-<hr>
-
-<div id="Notes-Data Science"><h2 id="Data Science" class="header"><a href="#Notes-Data Science">Data Science</a></h2></div>
-
-<ol>
-<li>
-<a href="DataScience/GoogleDataAnalyst/index.html">Google Data Analyst</a>
-
-</li><li>
-<a href="DataScience/(DS0001)_MLStanfordCoursera/index.html">Machine Learning Stanford Coursera</a>
-
-</li><li>
-<a href="DataScience/(DS0002)_AIRobotics/index.html">Artificial Intelligence in Robotics</a>
-
-</li><li>
-<a href="DataScience/(DS0003)_Online_Training_Mobile_Robotics/index.html">Online Training Mobile Robotics</a>
-
-</li><li>
-<a href="DataScience/Other/index.html">Standalone Topics</a>
 
 </li></ol>
 <hr>
