[MBJ] Fnish adding notes of T1 [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/T1/01_bias_variance_tradeoff.html
+++ b/src/Notes/Master/2C_2C/AAII/T1/01_bias_variance_tradeoff.html
@@ -29,7 +29,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="../../index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Bias/Variance Tradeoff"><h1 id="Bias/Variance Tradeoff" class="header"><a href="#Bias/Variance Tradeoff">Bias/Variance Tradeoff</a></h1></div>
